@@ -1,8 +1,12 @@
+2002-03-09  Petr Mikulik  <mikulik@physics.muni.cz>
+
+	* src/win/wgraph.c src/win/winmain.c: Remove compiler warnings.
+
 2002-03-07  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/03/07 20:44:02 $).
+	last modification date (from the tag $Date: 2002/03/09 11:33:08 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
